# ros-gazebo-test

./: Dockerfile  README.md  launch_docker.sh
workspace/src/ros_gz_test/: CMakeLists.txt  counter.launch  package.xml
workspace/src/ros_gz_test/src/: counter.cpp  plugin.cpp
workspace/src/ros_gz_test/worlds/: test.world
